@@ -23,12 +23,12 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
-    implementation 'org.springframework:spring-beans:5.3.23'
-    implementation 'org.springframework:spring-jdbc:5.3.23'
+    implementation 'org.springframework:spring-beans:5.3.24'
+    implementation 'org.springframework:spring-jdbc:5.3.24'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
