@@ -1,3 +1,6 @@
+May 25, 2023
+  CurationDafGenerator -- moved hard-coded qualifier mappings into properties file
+
 May 16, 2023
   CurationDafGenerator -- now providing DataProviderDTO.cross_reference_dto data for RGD (OMIM xref data still missing)
   CurationAlleleGenerator -- added DataProviderDTO
